@@ -1,3 +1,10 @@
+2023-10-09 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* src/SDCCerr.c,
+	  src/SDCCerr.h,
+	  src/SDCCmain.c:
+	  Fix bug #3658 by warning on non-default sdcccall with default stdlib or crt0.
+
 2023-10-07 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* src/SDCCgenconstprop.cc:
